Update tmux.conf: Changed status-position to bottom

--- a/home/dot_config/tmux/tmux.conf
+++ b/home/dot_config/tmux/tmux.conf
@@ -1,6 +1,6 @@
 source-file ~/.config/tmux/tmux.reset.conf
 set-option -g default-terminal 'screen-256color'
-set-option -g terminal-overrides ',xterm-256color:RGB'
+set-option -g terminal-overrides 'xterm-256color:RGB'
 
 set -g prefix ^A
 set -g base-index 1              # start indexing windows at 1 instead of 0
@@ -9,7 +9,7 @@ set -g escape-time 0             # zero-out escape time delay
 set -g history-limit 1000000     # increase history size (from 2,000)
 set -g renumber-windows on       # renumber all windows when any window is closed
 set -g set-clipboard on          # use system clipboard
-set -g status-position top       # macOS / darwin style
+set -g status-position bottom
 set -g default-terminal "${TERM}"
 setw -g mode-keys vi
 set -g pane-active-border-style 'fg=magenta,bg=default'
