Update compfy to picom in configuration files

--- a/home/dot_config/i3/config.d/autostart.conf
+++ b/home/dot_config/i3/config.d/autostart.conf
@@ -18,7 +18,7 @@ exec --no-startup-id xfce4-power-manager --daemon
 exec --no-startup-id xrdb -I"${HOME}" -load ~/.Xresources
 
 # Comfy
-exec --no-startup-id compfy --config ~/.config/compfy/compfy.conf --daemon
+exec --no-startup-id picom --config ~/.config/picom/picom.conf --daemon
 
 # Restore wallpaper color scheme using pywal
 exec_always --no-startup-id wal -R -q
