Add mouse support to tmux configuration

--- a/home/dot_config/tmux/tmux.conf
+++ b/home/dot_config/tmux/tmux.conf
@@ -2,6 +2,7 @@ source-file ~/.config/tmux/tmux.reset.conf
 set-option -g default-terminal 'screen-256color'
 set-option -g terminal-overrides 'xterm-256color:RGB'
 
+
 set -g prefix ^A
 set -g base-index 1              # start indexing windows at 1 instead of 0
 set -g detach-on-destroy off     # don't exit from tmux when closing a session
@@ -9,6 +10,7 @@ set -g escape-time 0             # zero-out escape time delay
 set -g history-limit 1000000     # increase history size (from 2,000)
 set -g renumber-windows on       # renumber all windows when any window is closed
 set -g set-clipboard on          # use system clipboard
+set -g mouse on
 set -g status-position bottom
 set -g default-terminal "${TERM}"
 setw -g mode-keys vi
