Add secondary prefix keybindings to tmux.conf

--- a/home/dot_config/tmux/tmux.conf
+++ b/home/dot_config/tmux/tmux.conf
@@ -3,7 +3,8 @@ set-option -g default-terminal 'screen-256color'
 set-option -g terminal-overrides 'xterm-256color:RGB'
 
 
-set -g prefix ^A
+set -g prefix ^A                 # set the secondary prefix to Ctrl-a
+set -g prefix2 ^B                # set the secondary prefix to Ctrl-b
 set -g base-index 1              # start indexing windows at 1 instead of 0
 set -g detach-on-destroy off     # don't exit from tmux when closing a session
 set -g escape-time 0             # zero-out escape time delay
