Add autostart script for xrandr configuration

--- a/home/dot_config/i3/config.d/autostart.conf
+++ b/home/dot_config/i3/config.d/autostart.conf
@@ -1,5 +1,8 @@
 # Launch Polybar
 exec_always --no-startup-id ~/.config/polybar/launch.sh
 
+# Run the xrandr script to set the correct monitor layout and resolution
+exec_always --no-startup-id [[ -f "$HOME/.xsync" ]] && "$HOME"/.xsync || xrandr --auto
+
 # Run i3-layouts
 exec i3-layouts
