Update window animation settings

--- a/home/dot_config/picom/picom.conf
+++ b/home/dot_config/picom/picom.conf
@@ -50,10 +50,10 @@ animation-for-open-window = "zoom";
 
 # minimize or close windows
 # available options: slide-up, slide-down, slide-left, slide-right, squeeze, squeeze-bottom, zoom
-animation-for-unmap-window = "squeeze";
+animation-for-unmap-window = "none";
 
 # popup windows
-animation-for-transient-window = "slide-up";
+animation-for-transient-window = "zoom";
 
 # set animation for windows being transitioned out while changings tags
 animation-for-prev-tag = "minimize";
