Update margins and border sizes in openbox and polybar configuration files

--- a/home/dot_config/polybar/polybars/common-top.conf
+++ b/home/dot_config/polybar/polybars/common-top.conf
@@ -74,7 +74,7 @@ width = 100%
 height = 35
 
 border-top-size = 10
-border-bottom-size = 5
+border-bottom-size = 10
 border-right-size = 10
 border-left-size = 10
 
@@ -88,3 +88,5 @@ radius = 12.0
 modules-left = jgmenu apps window_switch bluetooth pulseaudio-microphone pulseaudio-bar backlight-acpi-bar
 modules-center = date-popup
 modules-right = pkg night-mode feh-blur-toggle github tray
+
+override-redirect = false
