--- a/home/dot_config/polybar/polybars/common-bottom.conf
+++ b/home/dot_config/polybar/polybars/common-bottom.conf
@@ -90,3 +90,5 @@ radius = 12.0
 modules-left =
 modules-center = playing
 modules-right = keyboard filesystem memory cpu temperature
+
+override-redirect = false
