Update Chezmoi data command in workflow

--- a/.github/workflows/clone-and-install.yml
+++ b/.github/workflows/clone-and-install.yml
@@ -23,4 +23,5 @@ jobs:
         run: ./install.sh
 
       - name: Chezmoi data
-        run: '"$HOME/.local/bin/chezmoi" data'
+        if: always()
+        run: '"$HOME/.local/bin/chezmoi" data --source=/__w/dotfiles/dotfiles'
