Update Chezmoi data command

--- a/.github/workflows/clone-and-install.yml
+++ b/.github/workflows/clone-and-install.yml
@@ -24,4 +24,4 @@ jobs:
 
       - name: Chezmoi data
         if: always()
-        run: '"$HOME/.local/bin/chezmoi" data --source=/__w/dotfiles/dotfiles'
+        run: '"$HOME/.local/bin/chezmoi" data'
