Update background color in polybar configuration file

--- a/home/private_dot_config/polybar/master.conf
+++ b/home/private_dot_config/polybar/master.conf
@@ -1,5 +1,5 @@
 [colors]
-# background = ${xrdb:background:#222}
+; background = ${xrdb:background:#222}
 background = #00000000
 background-alt = #444
 foreground = ${xrdb:foreground:#dfdfdf}
