Update picom and polybar configuration files

--- a/home/private_dot_config/picom/picom.conf
+++ b/home/private_dot_config/picom/picom.conf
@@ -80,7 +80,8 @@ corner-radius = 10;
 rounded-corners-exclude = [
     "class_g *= 'Polybar'",
     "window_type = 'dock'",
-    "class_g = 'bar'"
+    "class_g = 'bar'",
+    "name *= 'polybar'",
 ]
 
 #################################
