--- a/home/private_dot_config/polybar/master.conf
+++ b/home/private_dot_config/polybar/master.conf
@@ -1,9 +1,12 @@
 [colors]
-; background = ${xrdb:background:#222}
-background = #00000000
+; background = ${xrdb:background:#dfdfdf}
+; background = #ffffff
+background = ${xrdb:color15:#dfdfdf}
+; background = #00000000
 background-alt = #444
-foreground = ${xrdb:foreground:#dfdfdf}
-foreground-alt = #555
+; foreground = ${xrdb:foreground:#dfdfdf}
+foreground = ${xrdb:color4:#dfdfdf}
+foreground-alt = ${xrdb:color4:#dfdfdf}
 primary = ${xrdb:color0:#FFF}
 secondary = ${xrdb:color7:#dfdfdf}
 alert = #B2535B
