--- a/home/private_dot_config/polybar/polybars/common-bottom.conf
+++ b/home/private_dot_config/polybar/polybars/common-bottom.conf
@@ -73,19 +73,19 @@ cursor-scroll = ns-resize
 width = 100%
 height = 30
 
-border-top-size = 10
-border-bottom-size = 10
-border-right-size = 10
-border-left-size = 10
+border-top-size = 0
+border-bottom-size = 0
+border-right-size = 0
+border-left-size = 0
 
 bottom = true
 
-background = #00000000
+background = ${colors.background}
 background-alt = ${colors.background-alt}
 foreground = ${colors.foreground}
 foreground-alt = ${colors.foreground-alt}
 
-radius = 12.0
+radius = 0
 
 modules-left =
 modules-center = playing
