--- a/home/private_dot_config/wpg/wpg.conf
+++ b/home/private_dot_config/wpg/wpg.conf
@@ -2,10 +2,10 @@
 set_wallpaper = true
 gtk = true
 active = 0
-light_theme = false
+light_theme = true
 editor = code
-execute_cmd = false
-command = alacritty -e echo hi
+execute_cmd = true
+command = alacritty -e wal -R -q -e -t -n
 backend = wal
 alpha = 100
 smart_sort = true
