Update wpg.conf execute_cmd value

--- a/home/private_dot_config/wpg/wpg.conf
+++ b/home/private_dot_config/wpg/wpg.conf
@@ -4,8 +4,8 @@ gtk = true
 active = 0
 light_theme = true
 editor = code
-execute_cmd = true
-command = alacritty -e wal -R -q -e -t -n
+execute_cmd = false
+command = alacritty -e wal -R -q -t -n
 backend = wal
 alpha = 100
 smart_sort = true
