Update border sizes and colors in polybar configuration files

--- a/home/private_dot_config/polybar/polybars/i3-top.conf
+++ b/home/private_dot_config/polybar/polybars/i3-top.conf
@@ -34,8 +34,11 @@ line-color = #f00
 ; border-size supports any percentage with offset.
 ; For border-{left,right}-size, the percentage is relative to the monitor width
 ; and for border-{top,bottom}-size, it is relative to the monitor height.
-border-size = 4
-border-color = #00000000
+border-color = ${colors.foreground}
+border-top-size = 0
+border-bottom-size = 2
+border-right-size = 0
+border-left-size = 0
 
 ; Padding (number of spaces, pixels, or points) to add at the beginning/end of
 ; the bar
@@ -72,11 +75,6 @@ cursor-scroll = ns-resize
 
 width = 100%
 height = 40
-
-border-top-size = 0
-border-bottom-size = 0
-border-right-size = 0
-border-left-size = 0
 
 background = ${colors.background}
 background-alt = ${colors.background-alt}
