Update light_theme setting in wpg.conf

--- a/home/private_dot_config/wpg/wpg.conf
+++ b/home/private_dot_config/wpg/wpg.conf
@@ -2,7 +2,7 @@
 set_wallpaper = true
 gtk = true
 active = 0
-light_theme = true
+light_theme = false
 editor = code
 execute_cmd = false
 command = alacritty -e wal -R -q -t -n
