Update colors in polybar configuration file

--- a/home/private_dot_config/polybar/master.conf
+++ b/home/private_dot_config/polybar/master.conf
@@ -1,17 +1,13 @@
 [colors]
-; background = ${xrdb:background:#dfdfdf}
-; background = #ffffff
-background = ${xrdb:color15:#dfdfdf}
-; background = #00000000
-background-alt = #444
-; foreground = ${xrdb:foreground:#dfdfdf}
-foreground = ${xrdb:color4:#dfdfdf}
-foreground-alt = ${xrdb:color4:#dfdfdf}
-primary = ${xrdb:color0:#FFF}
-secondary = ${xrdb:color7:#dfdfdf}
-alert = #B2535B
-moderate = #ebcb8b
-urgent = #bf616a
+background = ${xrdb:color15}
+background-alt = ${xrdb:color8}
+foreground = ${xrdb:color4}
+foreground-alt = ${xrdb:color12}
+primary = ${xrdb:color1}
+secondary = ${xrdb:color2}
+alert = ${xrdb:color3}
+moderate = ${xrdb:color11}
+urgent = ${xrdb:color9}
 trim = #8fa1b3
 blue = #8fa1b3
 pink = #bf616a
