Update color scheme in polybar configuration file

--- a/home/private_dot_config/polybar/master.conf
+++ b/home/private_dot_config/polybar/master.conf
@@ -1,8 +1,26 @@
+; colors from 0 to 15 mean the following based on the base16 color scheme:
+;   - color0: Default Background
+;   - color1: Lighter Background (Used for status bars, line number and folding marks)
+;   - color2: Selection Background
+;   - color3: Comments, Invisibles, Line Highlighting
+;   - color4: Dark Foreground (Used for status bars)
+;   - color5: Default Foreground, Caret, Delimiters, Operators
+;   - color6: Light Foreground (Not often used)
+;   - color7: Light Background (Not often used)
+;   - color8: Variables, XML Tags, Markup Link Text, Markup Lists, Diff Deleted
+;   - color9: Integers, Boolean, Constants, XML Attributes, Markup Link Url
+;   - color10: Classes, Markup Bold, Search Text Background
+;   - color11: Strings, Inherited Class, Markup Code, Diff Inserted
+;   - color12: Support, Regular Expressions, Escape Characters, Markup Quotes
+;   - color13: Functions, Methods, Attribute IDs, Headings
+;   - color14: Keywords, Storage, Selector, Markup Italic, Diff Changed
+;   - color15: Deprecated, Opening/Closing Embedded Language Tags, e.g. <?php ?>
+
 [colors]
-background = ${xrdb:color15}
-background-alt = ${xrdb:color8}
+background = ${xrdb:color7}
+background-alt = ${xrdb:color1}
 foreground = ${xrdb:color4}
-foreground-alt = ${xrdb:color12}
+foreground-alt = ${xrdb:color6}
 primary = ${xrdb:color1}
 secondary = ${xrdb:color2}
 alert = ${xrdb:color3}
