Update polybar configuration files

--- a/home/private_dot_config/polybar/master.conf
+++ b/home/private_dot_config/polybar/master.conf
@@ -17,9 +17,9 @@
 ;   - color15: Deprecated, Opening/Closing Embedded Language Tags, e.g. <?php ?>
 
 [colors]
-background = ${xrdb:color7}
+background = ${xrdb:background}
 background-alt = ${xrdb:color1}
-foreground = ${xrdb:color4}
+foreground = ${xrdb:foreground}
 foreground-alt = ${xrdb:color6}
 primary = ${xrdb:color1}
 secondary = ${xrdb:color2}
