--- a/home/private_dot_config/polybar/polybars/i3-top.conf
+++ b/home/private_dot_config/polybar/polybars/i3-top.conf
@@ -34,11 +34,11 @@ line-color = #f00
 ; border-size supports any percentage with offset.
 ; For border-{left,right}-size, the percentage is relative to the monitor width
 ; and for border-{top,bottom}-size, it is relative to the monitor height.
-border-color = ${colors.foreground}
-border-top-size = 0
-border-bottom-size = 0
-border-right-size = 0
-border-left-size = 0
+border-color = #00000000
+border-top-size = 10
+border-bottom-size = 5
+border-right-size = 10
+border-left-size = 10
 
 ; Padding (number of spaces, pixels, or points) to add at the beginning/end of
 ; the bar
@@ -81,7 +81,7 @@ background-alt = ${colors.background-alt}
 foreground = ${colors.foreground}
 foreground-alt = ${colors.foreground-alt}
 
-radius = 0
+radius = 16
 
 modules-left = jgmenu apps window_switch bluetooth pulseaudio-microphone pulseaudio-bar backlight-acpi-bar
 modules-center = date-popup
