Update i3 workspace labels

--- a/home/private_dot_config/polybar/modules/i3.conf
+++ b/home/private_dot_config/polybar/modules/i3.conf
@@ -53,6 +53,6 @@ ws-icon-8 = 9;󰝦
 ws-icon-9 = 10;󰝦
 
 ; modified labels using icon
-label-focused = %index% %icon%
-label-unfocused = %index% %icon%
-label-visible = %index% %icon%
+label-focused = %index% 󰧞
+label-unfocused = %index% 󰝦
+label-visible = %index% 󰝦
