Update configuration files and remove unused scripts

--- a/home/private_dot_config/polybar/modules/music.conf
+++ b/home/private_dot_config/polybar/modules/music.conf
@@ -1,7 +1,7 @@
 [module/playing]
 type = custom/script
 interval = 2
-exec = dots player
+exec = ~/.config/polybar/scripts/player
 click-left = playerctl previous &
 click-right = playerctl next &
 click-middle = playerctl play-pause &
@@ -13,6 +13,6 @@ type = custom/script
 interval = 2
 format-prefix = " 󰓇 "
 format = <label>
-exec = dots spotify
+exec = ~/.config/polybar/scripts/spotify
 format-underline =
 format-foreground = ${colors.foreground}
