--- a/home/private_dot_config/polybar/modules/weather.conf
+++ b/home/private_dot_config/polybar/modules/weather.conf
@@ -1,6 +1,6 @@
 [module/weather]
 type = custom/script
-exec = dots openweathermap-detailed
+exec = ~/.config/polybar/scripts/openweathermap-detailed
 exec-if = ping openweathermap.org -c 1
 interval = 600
 label-font = 3
