Add jgmenu script and update menu.xml

--- a/home/private_dot_config/polybar/modules/jgmenu.conf
+++ b/home/private_dot_config/polybar/modules/jgmenu.conf
@@ -3,5 +3,5 @@ type = custom/script
 label = %output%
 interval = 10
 exec = echo ""
-click-left = "jgmenu_run > /dev/null 2>&1 &"
+click-left = "dots jgmenu > /dev/null 2>&1 &"
 click-right = exo-open ~/.config/jgmenu/jgmenurc
