Add thunar daemon and pywal colorscheme*** ***Update eww dashboard launch script*** ***Add applications to xfce4-notifyd.xml*** ***Update xfce4-notifyd.xml settings

--- a/home/private_dot_config/wpg/wpg.conf
+++ b/home/private_dot_config/wpg/wpg.conf
@@ -4,8 +4,8 @@ gtk = true
 active = 0
 light_theme = false
 editor = code
-execute_cmd = false
-command = alacritty -e wal -R -q -t -n
+execute_cmd = true
+command = alacritty -e dots-wal-reload
 backend = wal
 alpha = 100
 smart_sort = true
