Update dependencies and autostart configurations

--- a/home/private_dot_config/polybar/polybars/common-top.conf
+++ b/home/private_dot_config/polybar/polybars/common-top.conf
@@ -83,8 +83,8 @@ foreground-alt = ${colors.foreground-alt}
 
 radius = 16
 
-modules-left = jgmenu apps window_switch bluetooth pulseaudio-microphone pulseaudio-bar backlight-acpi-bar
+modules-left = jgmenu apps window_switch pulseaudio-microphone pulseaudio-bar backlight-acpi-bar
 modules-center = date-popup
-modules-right = pkg night-mode feh-blur-toggle github tray
+modules-right = night-mode feh-blur-toggle github tray
 
 override-redirect = false
