--- a/home/private_dot_config/i3/config.d/autostart.conf
+++ b/home/private_dot_config/i3/config.d/autostart.conf
@@ -1,5 +1,8 @@
-# Launch Polybar
+# Launch polybar
 exec_always --no-startup-id ~/.config/polybar/launch.sh
 
 # Run i3-layouts
 exec i3-layouts
+
+# You can add new exec commands here or just create new .desktop files in the
+# ~/.config/autostart directory.
