Update animation-clamping setting in picom.conf

--- a/home/private_dot_config/picom/picom.conf
+++ b/home/private_dot_config/picom/picom.conf
@@ -42,7 +42,7 @@ animation-dampening = 12;
 # toggles clamping
 # if you are using a animation setting that would make the window extend larger than it would be after,
 # the animation has played then it will cut the animation off once the window reaches its physical geometry.
-animation-clamping = false;
+animation-clamping = true;
 
 # open windows
 # available options: slide-up, slide-down, slide-left, slide-right, squeeze, squeeze-bottom, zoom
