--- a/home/private_dot_config/i3/config.d/autostart.conf
+++ b/home/private_dot_config/i3/config.d/autostart.conf
@@ -1,5 +1,8 @@
+# Run xdg autostart
+exec --no-startup-id xdg-autostart &
+
 # Launch polybar
-exec_always --no-startup-id ~/.config/polybar/launch.sh
+exec_always --no-startup-id ~/.config/polybar/launch.sh &
 
 # Run i3-layouts
 exec i3-layouts
