Add workspaces.conf module and update modules-left in common-bottom.conf

--- a/home/dot_config/polybar/polybars/common-bottom.conf
+++ b/home/dot_config/polybar/polybars/common-bottom.conf
@@ -85,7 +85,7 @@ foreground-alt = ${colors.foreground-alt}
 
 radius = 0
 
-modules-left =
+modules-left = workspaces-with-icons
 modules-center = playing
 modules-right = keyboard filesystem memory cpu temperature
 
