--- a/home/dot_config/polybar/modules.conf
+++ b/home/dot_config/polybar/modules.conf
@@ -21,6 +21,7 @@ include-file = ~/.config/polybar/modules/resources.conf
 include-file = ~/.config/polybar/modules/tray.conf
 include-file = ~/.config/polybar/modules/weather.conf
 include-file = ~/.config/polybar/modules/window.conf
+include-file = ~/.config/polybar/modules/workspaces.conf
 
 [settings]
 screenchange-reload = true
