Add label-monitor configuration to workspaces.conf

--- a/home/dot_config/polybar/modules/workspaces.conf
+++ b/home/dot_config/polybar/modules/workspaces.conf
@@ -34,6 +34,13 @@ reverse-scroll = false
 ; Default: <label-state>
 format = <label-monitor><label-state>
 
+; Cannot be used if group-by-monitor is false
+; Available tokens:
+;   %name%
+; Default: %name%
+label-monitor = %name%
+label-monitor-foreground = ${colors.foreground-alt}
+
 ; Used for the currently selected workspaces
 ; Available tokens:
 ;   %name%
@@ -56,7 +63,6 @@ label-active-padding = 2
 ; Default: %icon% %name%
 label-empty = %name%
 label-empty-padding = 2
-label-empty-foreground = ${colors.foreground-alt}
 label-empty-underline =
 
 ; Used for workspaces at least one window
@@ -68,6 +74,7 @@ label-empty-underline =
 ; Default: %icon% %name%
 label-occupied = %name%
 label-occupied-background = ${self.label-active-background}
+label-occupied-foreground = ${colors.foreground-alt}
 label-occupied-padding = ${self.label-active-padding}
 
 ; Used for workspaces containing a window that is demanding attention (has the
