Remove unnecessary command in wpg.conf

--- a/home/dot_config/wpg/wpg.conf
+++ b/home/dot_config/wpg/wpg.conf
@@ -5,7 +5,7 @@ active = 0
 light_theme = false
 editor = code
 execute_cmd = true
-command = alacritty -e dots-wal-reload
+command = dots-wal-reload
 backend = wal
 alpha = 100
 smart_sort = true
