Update permissions in docs.yml

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -66,8 +66,7 @@ jobs:
     if: ${{ always() }}
 
     permissions:
-      contents: read
-      statuses: write
+      contents: write
 
     runs-on: ubuntu-latest
 
