Update i3 keybindings for focusing parent and child windows and moving windows to center position

--- a/home/dot_config/i3/config
+++ b/home/dot_config/i3/config
@@ -179,14 +179,17 @@ bindsym $Mod+Down  focus down
 bindsym $Mod+Up    focus up
 bindsym $Mod+Right focus right
 
-bindsym $Mod+p focus parent
-bindsym $Mod+c focus child
+bindsym $Mod+Ctrl+p focus parent
+bindsym $Mod+Ctrl+c focus child
 
 # move focused window
 bindsym $Mod+Shift+$left  move left  10px
 bindsym $Mod+Shift+$down  move down  10px
 bindsym $Mod+Shift+$up    move up    10px
 bindsym $Mod+Shift+$right move right 10px
+
+# move position centered
+bindsym $Mod+c move position center
 
 # alternatively, you can use the cursor keys:
 bindsym $Mod+Shift+Up    move up    10px
