Update background color in polybar configuration file

--- a/home/dot_config/polybar/master.conf
+++ b/home/dot_config/polybar/master.conf
@@ -17,7 +17,7 @@
 ;   - color15: Deprecated, Opening/Closing Embedded Language Tags, e.g. <?php ?>
 
 [colors]
-background = ${xrdb:color8}
+background = ${xrdb:background}
 background-alt = ${xrdb:color1}
 foreground = ${xrdb:foreground}
 foreground-alt = ${xrdb:color6}
