Add Xresources file loading to i3 and openbox autostart scripts

--- a/home/dot_config/i3/config.d/autostart.conf
+++ b/home/dot_config/i3/config.d/autostart.conf
@@ -1,3 +1,6 @@
+# Load Xresources file
+exec --no-startup-id xrdb -merge ~/.Xresources
+
 # Run xdg autostart
 exec --no-startup-id xdg-autostart &
 
