Fix keybinding for toggling in i3 config

--- a/home/dot_config/i3/config
+++ b/home/dot_config/i3/config
@@ -88,7 +88,7 @@ bindsym Shift+XF86MonBrightnessUp   exec --no-startup-id ~/.local/bin/dots brigh
 bindsym Shift+XF86MonBrightnessDown exec --no-startup-id ~/.local/bin/dots brightness "*" - 0.01
 
 # toggle
-bindsym $Mod+Control+p exec --no-startup-id ~/.local/bin/dots toggle -p -t &
+bindsym $Mod+p exec --no-startup-id ~/.local/bin/dots toggle -p -t &
 
 ###########          Workspace Bindings          ###############
 
