Update smart_borders setting to no_gaps

--- a/home/dot_config/i3/config
+++ b/home/dot_config/i3/config
@@ -267,7 +267,7 @@ for_window [class="^.*"] border pixel 2, title_format "<b alpha='1'> %class >> %
 
 # Smart borders (draw borders around container only if it is not the only container on this workspace)
 # on|no_gaps (on=always activate and no_gaps=only activate if the gap size to the edge of the screen is 0)
-smart_borders on
+smart_borders no_gaps
 
 # gaps
 gaps inner 12
