--- a/home/dot_config/picom/picom.conf
+++ b/home/dot_config/picom/picom.conf
@@ -74,7 +74,8 @@ enable-fading-next-tag = true;
 # Sets the radius of rounded window corners. When > 0, the compositor will
 # round the corners of windows. Does not interact well with
 # `transparent-clipping`.
-corner-radius = 5;
+# corner-radius = 12;
+corner-radius = 4;
 
 # Exclude conditions for rounded corners.
 rounded-corners-exclude = [
