Update Polybar configuration

--- a/home/dot_config/polybar/bars/i3-bottom.conf
+++ b/home/dot_config/polybar/bars/i3-bottom.conf
@@ -17,7 +17,7 @@ fixed-center = true
 ; Individual values can be defined using:
 ;   {overline,underline}-size
 ;   {overline,underline}-color
-line-size = 3
+line-size = 2
 line-color = #f00
 
 ; Values applied to all borders
@@ -34,7 +34,7 @@ line-color = #f00
 ; border-size supports any percentage with offset.
 ; For border-{left,right}-size, the percentage is relative to the monitor width
 ; and for border-{top,bottom}-size, it is relative to the monitor height.
-border-color = ${colors.foreground}
+border-color = ${colors.background}
 border-top-size = 0
 border-bottom-size = 0
 border-right-size = 0
@@ -44,14 +44,13 @@ border-left-size = 0
 ; the bar
 ; Individual side values can be defined using:
 ;   padding-{left,right}
-padding-left = 2
-padding-right = 2
+padding = 2
 
 ; Margin (number of spaces, pixels, or points) to add before/after each module
 ; Individual side values can be defined using:
 ;   module-margin-{left,right}
-module-margin-left = 2
-module-margin-right = 2
+module-margin-left = 0
+module-margin-right = 0
 
 ; Fonts are defined using <font-name>;<vertical-offset>
 ; Font names are specified using a fontconfig pattern.
@@ -87,7 +86,9 @@ radius = 0
 
 modules-left = i3-with-icons
 modules-center = playing
-modules-right = keyboard filesystem memory cpu temperature
+modules-right = keyboard sep filesystem sep memory sep cpu sep temperature
 
 wm-restack = i3
-override-redirect = false
+override-redirect = true
+
+enable-ipc = true
