--- a/home/dot_config/polybar/master.conf
+++ b/home/dot_config/polybar/master.conf
@@ -33,3 +33,19 @@ orange = #ebcb8b
 purple = #b48ead
 yellow = #ebcb8b
 border = #c0c5ce
+
+[settings]
+screenchange-reload = false
+
+compositing-background = source
+compositing-foreground = over
+compositing-overline = over
+compositing-underline = over
+compositing-border = over
+
+pseudo-transparency = false
+
+[global/wm]
+
+margin-top = 0
+margin-bottom = 0
