--- a/home/dot_config/polybar/modules/audio.conf
+++ b/home/dot_config/polybar/modules/audio.conf
@@ -7,6 +7,21 @@ click-left = dots microphone --toggle &
 [module/pulseaudio-bar]
 inherit = module/pulseaudio
 format-volume =  <label-volume> <bar-volume>
+bar-volume-width = 7
+bar-volume-foreground-0 = #55aa55
+bar-volume-foreground-1 = #55aa55
+bar-volume-foreground-2 = #55aa55
+bar-volume-foreground-3 = #55aa55
+bar-volume-foreground-4 = #55aa55
+bar-volume-foreground-5 = #f5a70a
+bar-volume-foreground-6 = #B2535B
+bar-volume-gradient = true
+bar-volume-indicator = |
+bar-volume-indicator-font = 4
+bar-volume-fill = ─
+bar-volume-fill-font = 4
+bar-volume-empty = ─
+bar-volume-empty-font = 4
 
 [module/pulseaudio]
 type = internal/pulseaudio
@@ -20,23 +35,6 @@ label-volume-foreground = ${colors.foreground}
 
 label-muted =  muted
 label-muted-foreground = ${colors.foreground-alt}
-
-bar-volume-width = 7
-bar-volume-foreground-0 = #55aa55
-bar-volume-foreground-1 = #55aa55
-bar-volume-foreground-2 = #55aa55
-bar-volume-foreground-3 = #55aa55
-bar-volume-foreground-4 = #55aa55
-bar-volume-foreground-5 = #f5a70a
-bar-volume-foreground-6 = #B2535B
-bar-volume-gradient = false
-bar-volume-indicator = |
-bar-volume-indicator-font = 4
-bar-volume-fill = ─
-bar-volume-fill-font = 4
-bar-volume-empty = ─
-bar-volume-empty-font = 4
-bar-volume-empty-foreground = ${colors.foreground-alt}
 
 [module/alsa]
 type = internal/alsa
