--- a/home/dot_config/polybar/modules/jgmenu.conf
+++ b/home/dot_config/polybar/modules/jgmenu.conf
@@ -1,7 +1,6 @@
 [module/jgmenu]
-type = custom/script
-label = %output%
-interval = 10
-exec = echo ""
+type = custom/text
+label = 
+label-font = 5
 click-left = "dots jgmenu > /dev/null 2>&1 &"
 click-right = exo-open ~/.config/jgmenu/jgmenurc
