--- a/home/dot_config/polybar/bars/common-top.conf
+++ b/home/dot_config/polybar/bars/common-top.conf
@@ -17,7 +17,7 @@ fixed-center = true
 ; Individual values can be defined using:
 ;   {overline,underline}-size
 ;   {overline,underline}-color
-line-size = 3
+line-size = 2
 line-color = #f00
 
 ; Values applied to all borders
@@ -34,24 +34,23 @@ line-color = #f00
 ; border-size supports any percentage with offset.
 ; For border-{left,right}-size, the percentage is relative to the monitor width
 ; and for border-{top,bottom}-size, it is relative to the monitor height.
-border-color = #00000000
-border-top-size = 10
-border-bottom-size = 5
-border-right-size = 10
-border-left-size = 10
+border-color = ${colors.background}
+border-top-size = 8
+border-bottom-size = 8
+border-right-size = 8
+border-left-size = 8
 
 ; Padding (number of spaces, pixels, or points) to add at the beginning/end of
 ; the bar
 ; Individual side values can be defined using:
 ;   padding-{left,right}
-padding-left = 2
-padding-right = 2
+padding = 1
 
 ; Margin (number of spaces, pixels, or points) to add before/after each module
 ; Individual side values can be defined using:
 ;   module-margin-{left,right}
-module-margin-left = 2
-module-margin-right = 2
+module-margin-left = 0
+module-margin-right = 0
 
 ; Fonts are defined using <font-name>;<vertical-offset>
 ; Font names are specified using a fontconfig pattern.
@@ -64,6 +63,7 @@ font-0 = "monospace:size=10;0"
 font-1 = "Hack Nerd Font Mono:style=Solid:pixelsize=15;2"
 font-2 = "Hack Nerd Font Mono:style=Regular:pixelsize=15;2"
 font-3 = "Hack Nerd Font Mono:pixelsize=15;2"
+font-4 = "Hack Nerd Font Mono:style=Solid:pixelsize=18.35;4"
 
 ; Requires polybar to be built with xcursor support (xcb-util-cursor)
 ; Possible values are:
@@ -74,17 +74,17 @@ cursor-click = pointer
 cursor-scroll = ns-resize
 
 width = 100%
-height = 40
+height = 25
 
 background = ${colors.background}
 background-alt = ${colors.background-alt}
 foreground = ${colors.foreground}
 foreground-alt = ${colors.foreground-alt}
 
-radius = 16
+radius = 0
 
-modules-left = jgmenu apps window_switch pulseaudio-microphone pulseaudio-bar backlight-acpi-bar
+modules-left = jgmenu sep apps sep window_switch sep pulseaudio-microphone sep pulseaudio-bar sep backlight-acpi-bar
 modules-center = date-popup
-modules-right = night-mode feh-blur-toggle github tray
+modules-right = night-mode sep feh-blur-toggle sep github sep tray
 
 override-redirect = false
