Update polybar font sizes

--- a/home/dot_config/polybar/modules/misc.conf
+++ b/home/dot_config/polybar/modules/misc.conf
@@ -19,5 +19,6 @@ label-foreground = ${colors.background}
 
 [module/dots]
 type = custom/text
-label = "󰇙"
-label-foreground = ${colors.primary}
+label = "  󰇙  "
+label-foreground = ${colors.foreground-alt}
+label-font = 6
