--- a/home/dot_config/polybar/bars/i3-bottom.conf
+++ b/home/dot_config/polybar/bars/i3-bottom.conf
@@ -63,6 +63,8 @@ font-0 = "monospace:size=10;0"
 font-1 = "Hack Nerd Font Mono:style=Solid:pixelsize=15;2"
 font-2 = "Hack Nerd Font Mono:style=Regular:pixelsize=15;2"
 font-3 = "Hack Nerd Font Mono:pixelsize=15;2"
+font-4 = "Hack Nerd Font Mono:style=Solid:pixelsize=25;5"
+font-5 = "Hack Nerd Font Mono:style=Solid:pixelsize=10;2"
 
 ; Requires polybar to be built with xcursor support (xcb-util-cursor)
 ; Possible values are:
