--- a/home/dot_config/polybar/bars/i3-top.conf
+++ b/home/dot_config/polybar/bars/i3-top.conf
@@ -87,7 +87,7 @@ foreground-alt = ${colors.foreground-alt}
 
 radius = 4
 
-modules-left = jgmenu sep apps sep window_switch sep pulseaudio-microphone sep pulseaudio-bar sep backlight-acpi-bar
+modules-left = jgmenu dots apps sep window_switch sep pulseaudio-microphone sep pulseaudio-bar sep backlight-acpi-bar
 modules-center = date-popup
 modules-right = night-mode sep feh-blur-toggle sep github sep tray
 
