Update polybar configuration files

--- a/home/dot_config/polybar/bars/i3-bottom.conf
+++ b/home/dot_config/polybar/bars/i3-bottom.conf
@@ -88,7 +88,7 @@ radius = 0
 
 modules-left = i3-with-icons
 modules-center = playing
-modules-right = keyboard sep filesystem sep memory sep cpu sep temperature
+modules-right = keyboard dots filesystem sep memory sep cpu sep temperature
 
 wm-restack = i3
 override-redirect = true
